--- a/CSS/courses.css
+++ b/CSS/courses.css
@@ -15,12 +15,12 @@ body {
 .courses-container {
   padding: 50px;
   display: grid;
+  justify-content: center; /* Center horizontally */
+  align-items: center; /* Center vertically */
   height: 550px;
-  grid-gap: 20px;
   margin: 0px auto;
-  grid-template-rows: repeat(3, 1fr);
-  grid-template-columns: repeat(5, 1fr);
   /* background-color: black; */
+  margin-top: 20px;
 }
 
 .courses-container a {
@@ -40,10 +40,10 @@ body {
   flex-wrap: nowrap;
   background-color: red;
   border-radius: 10px;
-  font-size: 5em;
+  font-size: 4em;
   padding: 20px;
   width: 210px;
-  margin-right: 10px;
+  margin: 0px 10px;
   opacity: 0.9;
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.4); /* Change box shadow on hover */
   transition: 0.4s;
@@ -71,4 +71,8 @@ body {
 
 .CLocked {
   background-image: linear-gradient(to bottom right, #ececec, #9c9c9c);
+}
+
+.item {
+  margin-bottom: 20px;
 }
