--- a/Water Bank/style.css
+++ b/Water Bank/style.css
@@ -16,78 +16,17 @@ html {
 }
 
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   color: #444;
   background-color: #f3f3f3;
   height: 100vh;
-  padding: 2rem;
-}
-
-nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 2rem;
-}
-
-.welcome {
-  font-size: 1.9rem;
-  font-weight: 500;
-}
-
-.logo {
-  height: 5.25rem;
-}
-
-.login {
-  display: flex;
-}
-
-.login__input {
-  border: none;
-  padding: 0.5rem 2rem;
-  font-size: 1.6rem;
-  font-family: inherit;
-  text-align: center;
-  width: 12rem;
-  border-radius: 10rem;
-  margin-right: 1rem;
-  color: inherit;
-  border: 1px solid #fff;
-  transition: all 0.3s;
-}
-
-.login__input:focus {
-  outline: none;
-  border: 1px solid #ccc;
-}
-
-.login__input::placeholder {
-  color: #bbb;
-}
-
-.login__btn {
-  border: none;
-  background: none;
-  font-size: 2.2rem;
-  color: inherit;
-  cursor: pointer;
-  transition: all 0.3s;
-}
-
-.login__btn:hover,
-.login__btn:focus,
-.btn--sort:hover,
-.btn--sort:focus {
-  outline: none;
-  color: #777;
 }
 
 /* MAIN */
 .app {
   position: relative;
   max-width: 100rem;
-  margin: 4rem auto;
+  margin: 2rem auto;
   display: grid;
   grid-template-columns: 4fr 3fr;
   grid-template-rows: auto repeat(3, 15rem) auto;
@@ -298,4 +237,24 @@ h2 {
 
 .timer {
   font-weight: 600;
+}
+
+.searchUsersBtn,
+.form-control {
+  transform: scale(1.5);
+}
+
+.searchUsersBtn {
+  margin-left: 60px;
+}
+
+.navbar-brand {
+  transform: scale(1.7);
+
+  margin-right: 50px;
+  margin-left: 30px;
+}
+
+.setting-icon {
+  display: none;
 }
